Fix comment background in dark mode

--- a/resources/comments.scss
+++ b/resources/comments.scss
@@ -35,7 +35,6 @@ a {
 .new-comments .comment:target>.comment-display {
     border: 1px solid $color_primary25 !important;
     box-shadow: $sidebox_shadow;
-    background-color: white !important;
 }
 
 .new-comments .comment-display {
